--- a/pages/electronics/thyristor.mdx
+++ b/pages/electronics/thyristor.mdx
@@ -1,6 +1,6 @@
 import Image from "@/components/Image";
 
-## The Thyristor
+# The Thyristor
 
 A thyristor, also known as a Silicon Controlled Rectifier (SCR), is a semiconductor device.
 
