--- a/pages/electronics/diac.mdx
+++ b/pages/electronics/diac.mdx
@@ -1,12 +1,6 @@
 import Image from "@/components/Image";
 
-<Image src="/Diac-Cover.png" />
-
-# Diac
-**Contents:**\
-[1. What is a Diac?](#what-is-a-resistor)\
-[2. How does Diac work?](#how-does-diac-work)\
-[2. Diac Symbol](#resistor-symbol)
+# The Diac
 
 ## What is a Diac?
 
@@ -28,4 +22,4 @@ The DIAC symbol used to depict this electronic component in circuit diagrams can
 
 <Image src="/diac-circuit-symbol.svg" caption="DIAC circuit symbol" />
 
-The Diac has no anode, cathode but A1, A2 (Anode 1, Anode 2) or MT1, MT2.
+The Diac has no anode, or cathode but A1, A2 (Anode 1, Anode 2), or MT1, MT2.
