--- a/pages/electronics/transformer.mdx
+++ b/pages/electronics/transformer.mdx
@@ -2,4 +2,4 @@ import Image from "@/components/Image"
 
 # Transformers
 
-<Image src="Transformer.gif" caption="Transofrmer Image & Symbol" />
+<Image src="/Transformer.gif" caption="Transofrmer Image & Symbol" />
