--- a/pages/electronics/transformer.mdx
+++ b/pages/electronics/transformer.mdx
@@ -1,5 +1,7 @@
 import Image from "@/components/Image"
 
-# Transformers
+# Transformer Symbol
 
 <Image src="/Transformer.gif" caption="Transofrmer Image & Symbol" />
+
+The symbol used to represent a transformer in circuit diagrams consists of two coils with a dashed line in between. The primary coil is denoted by "P," and the secondary coil is represented by "S."
