--- a/pages/electronics/transformer.mdx
+++ b/pages/electronics/transformer.mdx
@@ -1,7 +1,12 @@
 import Image from "@/components/Image"
 
-# Transformer Symbol
+# Transformer
 
-<Image src="/Transformer.gif" caption="Transofrmer Image & Symbol" />
+A transformer is a crucial device in electrical engineering that enables the efficient transfer of electrical energy between circuits with different voltage levels. It consists of two or more coils of insulated wire wound around a core, usually made of laminated iron. Transformers are widely used in power transmission, distribution systems, and various electronic devices to step up or step down voltage levels as needed.
+
+
+## Transformer Construction & Symbol
+
+<Image src="/Transformer.gif" caption="Transofrmer Construction & Symbol" />
 
 The symbol used to represent a transformer in circuit diagrams consists of two coils with a dashed line in between. The primary coil is denoted by "P," and the secondary coil is represented by "S."
