--- a/pages/electronics/transistor.mdx
+++ b/pages/electronics/transistor.mdx
@@ -1,6 +1,16 @@
 import Image from "@/components/Image"
+import { Card, Cards } from "nextra-theme-docs";
 
 # What is a Transistor?
 
+Transistors are small electronic components  with two main functions:
+1. Work as a switch (Switch circuits on and off)
+2. Amplify signals
+
+There are two main types of transistors:
+<Cards>
+  <Card title="Resistor" href="/electronics/transistor/BJT" />
+  <Card title="Inductor" href="/electronics/transistor/FET" />
+</Cards>
 
 <Image src="" caption="..." />
