--- a/pages/electronics/transistor.mdx
+++ b/pages/electronics/transistor.mdx
@@ -3,10 +3,13 @@ import { Card, Cards } from "nextra-theme-docs";
 
 # What is a Transistor?
 
-Transistors are small electronic components  with two main functions:
-1. Work as a switch (Switch circuits on and off)
-2. Amplify signals
+Transistors are small electronic components used extensively in electronic circuits for two main functions:
+1. **Switching:** Transistors act as switches, allowing current to flow or preventing it from flowing through a circuit. By controlling the current flow, transistors can turn circuits on and off rapidly, making them essential for digital logic and microcontroller applications.
+2. **Amplification:** Transistors also serve as amplifiers, where a small input signal can be used to control a much larger output signal. This property is vital for signal processing and audio amplification in various electronic devices.
 
+## Types of Transistors
+
+Transistors can be broadly categorized into two main types:
 There are two main types of transistors:
 <Cards>
   <Card title="Resistor" href="/electronics/transistor/BJT" />
