--- a/pages/electronics/resistor.mdx
+++ b/pages/electronics/resistor.mdx
@@ -1,11 +1,10 @@
-import { TabTtab, FileTree } from "nextra-theme-docs";
 import Image from "@/components/Image";
 
 # What is a resistor?
 
 A resistor is an electrical component that limits or regulates the flow of electrical current in an electronic circuit. Resistors can also be used to provide a specific voltage for an active device such as a transistor.
 
-The resistance is measured in <span style={{color:"hsl(var(--nextra-primary-hue)100% 60%/var(--tw-text-opacity))"}}>ohms (Ω)</span>. An ohm is the resistance that occurs when a current of one ampere (A) passes through a resistor with a one volt (V) drop across its terminals. The current is proportional to the voltage across the terminal ends. This ratio is represented by <span style={{color:"hsl(var(--nextra-primary-hue)100% 60%/var(--tw-text-opacity))"}}> Ohm’s law: $ R=\frac{V}{I} $ </span>
+The resistance is measured in <span style={{color:"hsl(var(--nextra-primary-hue)100% 60%/var(--tw-text-opacity))"}}>ohms (Ω)</span>. An ohm is the resistance that occurs when a current of one ampere (A) passes through a resistor with a one-volt (V) drop across its terminals. The current is proportional to the voltage across the terminal ends. This ratio is represented by <span style={{color:"hsl(var(--nextra-primary-hue)100% 60%/var(--tw-text-opacity))"}}> Ohm’s law: $ R=\frac{V}{I} $ </span>
 
 ## Resistor Symbol
 
@@ -21,21 +20,4 @@ Resistors come in two main types:
 1. **Fixed Resistors**: These are the most common resistors used in electronic circuits to set specific conditions. Their values are chosen during the circuit design and don't usually need to be changed afterward.
 2. **Variable Resistors**: These resistors have a slider that can tap onto the main resistor element, creating three connections. When all three connections are used, it acts as a variable potential divider. By connecting to the slider and one end, you get a resistor with variable resistance.
 
-Here are the most commonly used types of resistors:
-
-<FileTree>
-  <FileTree.Folder name="Fixed resistors" open defaultOpen>
-    <FileTree.File name="Carbon composition" />
-    <FileTree.File name="Carbon film" />
-    <FileTree.File name="Metal oxide film resistor" />
-    <FileTree.File name="Metal film resistor" />
-    <FileTree.File name="Wire wound resistor" />
-    <FileTree.File name="Surface mount resistors" />
-  </FileTree.Folder>
-  <FileTree.Folder name="Variable resistors" open defaultOpen>
-    <FileTree.File name="Light dependent resistor / photoresistor" />
-    <FileTree.File name="Thermistor" />
-    <FileTree.File name="Varistor" />
-  </FileTree.Folder>
-</FileTree>
-For more detailed information about each type, you can search for them on the internet.
+For more detailed information about each type, you can search for them on the Internet.
