--- a/pages/electronics/transistor/FET.mdx
+++ b/pages/electronics/transistor/FET.mdx
@@ -1,1 +1,56 @@
-# FET transistors
+import { Card, Cards } from "nextra-theme-docs";
+import Image from "@/components/Image";
+
+# Introduction to FET Transistors
+
+**FET** stands for `field-effect transistor`. FET transistors are a type of transistor that uses an electric field to control the flow of current. FET transistors are made of semiconductor material, and they have three terminals: the **gate**, the **source**, and the **drain**.
+
+<Image src="/FET-transistor.webp" caption="FET Transistor Image" />
+
+The gate is the control terminal, and it is used to apply the electric field. The source is the input terminal, and the drain is the output terminal.
+
+## Types of FET Transistors
+
+There are two main types of FET transistors: **`MOSFET`** transistors and **`JFET`** transistors.
+
+- **MOSFET** transistors are made of metal-oxide-semiconductor material.
+- **JFET** transistors are made of junction-gate semiconductor material.
+
+<Image src="/MOSFET-vs-JFET.png" caption="MOSFET & JFET" />
+
+## MOSFET Transistors
+
+MOSFET transistors are the most common type of FET transistor. MOSFET transistors have a very high input impedance, which makes them ideal for use in digital circuits. MOSFET transistors are also very fast, and they can be used in a wide variety of applications.
+
+## JFET Transistors
+
+JFET transistors are less common than MOSFET transistors, but they have some advantages. JFET transistors are more rugged than MOSFET transistors, and they can be used in high-voltage applications. JFET transistors are also less sensitive to noise than MOSFET transistors.
+
+## Operation of FET Transistors
+
+The operation of a FET transistor is based on the principle of **field-effect**. When a voltage is applied to the gate of a FET transistor, it creates an electric field that affects the flow of current between the source and the drain.
+
+In a MOSFET transistor, the electric field created by the gate attracts electrons from the source. This causes a current to flow between the source and the drain. The amount of current that flows depends on the strength of the electric field.
+
+In a JFET transistor, the electric field created by the gate repels electrons from the source. This causes a current to flow between the source and the drain. The amount of current that flows depends on the strength of the electric field.
+
+## Applications of FET Transistors
+
+FET transistors are used in a wide variety of applications, including:
+
+- Digital circuits
+- Analog circuits
+- Power amplifiers
+- Switching circuits
+- Sensors
+
+## Conclusion
+
+FET transistors are versatile devices that can be used in a wide variety of applications. They are relatively easy to use and can be biased in a variety of ways. If you are looking for a transistor that can be used for amplification, switching, or sensing, then a FET transistor is a good option.
+
+---
+
+<Cards>
+  <Card title="JFET" href="/electronics/transistor/FET/JFET" />
+  <Card title="MOSFET" href="/electronics/transistor/FET/MOSFET" />
+</Cards>
