Add FET types Image

--- a/pages/electronics/transistor/FET.mdx
+++ b/pages/electronics/transistor/FET.mdx
@@ -16,7 +16,7 @@ There are two main types of FET transistors: **`MOSFET`** transistors and **`JFE
 - **MOSFET** transistors are made of metal-oxide-semiconductor material.
 - **JFET** transistors are made of junction-gate semiconductor material.
 
-<Image src="/MOSFET-vs-JFET.png" caption="MOSFET & JFET" />
+<Image src="/types-of-FET-transistor.png" caption="Types of FET transistor" />
 
 ## MOSFET Transistors
 
